# sft_data_generator

./: LICENSE  README.md  main.py  setup.cfg  setup.py
sft_data_generator/: README_EN.MD  README_ZH.MD  requirements.txt
src/sft_data_generator/: __init__.py  main.py
tests/: test_.xlsx  test_main.py
