# !/usr/bin/env python
# -*- coding: utf-8 -*-
# Created by Richard_Cui on 2024/5/15 11:02.
[metadata]
name = sft_data_generator
version = 0.0.1
description = A tool for generating data for SFT using LLM
author = Richard Cui
author_email = treedy2020@icloud.com
url = https://github.com/yourusername/sft_data_generator
long_description = file: README_EN.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = main
install_requires =
    openai~=1.13.3
    pandas~=2.2.1
    jsonlines~=4.0.0
    filetype~=1.2.0
    tqdm~=4.66.2
    setuptools~=68.2.2

[options.entry_points]
console_scripts =
    sft-data-generator = main:main