# !/usr/bin/env python
# -*- coding: utf-8 -*-
# Created by Richard_Cui on 2024/5/15 11:02.
[metadata]
name = sft_data_generator
version = 0.0.1
description = A tool for generating data for SFT using LLM
author = Richard_Cui
author_email = treedy2020@icloud.com
url = https://github.com/Treedy2020/sft_data_generator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    openai~=1.13.3
    pandas~=2.2.1
    jsonlines~=4.0.0
    filetype~=1.2.0
    tqdm~=4.66.2
    setuptools~=68.2.2
python_requires = >=3.8

[options.entry_points]
console_scripts =
    sft-data-generator = sft_data_generator.main:main
